Product isleyir link e gedir

--- a/src/index.css
+++ b/src/index.css
@@ -706,7 +706,7 @@ h2 {
         margin-top: 10px;
         padding: 20px 15px;
         height: max-content;
-        width: max-content;
+        width: 350px;
         background-color: #e7e9f1;
         border-radius: 15px;
     }
