--- a/src/index.css
+++ b/src/index.css
@@ -508,9 +508,9 @@ h2 {
         flex-wrap: wrap;
     }
 
-    .caruselDnone {
-        display: none;
-    }
+    .caruselDnone {display: none}
+    .coruselDesk{display: block;}
+    .productFlex1{display: flex; gap: 20px;}
 
 }
 
