--- a/src/index.css
+++ b/src/index.css
@@ -304,7 +304,17 @@ main {
     display: flex;
     padding: 20px 10px;
     justify-content: space-between;
+
     position: relative;
+}
+
+.listBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pul{
+    margin-left: 10px;
 }
 
 .listBtn input {
@@ -426,8 +436,9 @@ footer {
 }
 
 #productMenu {
+    margin: 15px 0 0 0;
     display: flex;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     gap: 20px;
 }
 
@@ -454,6 +465,14 @@ footer {
 
 h2 {
     font-family: Helvetica, sans-serif;
+
+}
+
+.listText h2 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 200px;
 }
 
 .qiymet {
@@ -487,18 +506,26 @@ h2 {
 }
 
 @media only screen and (min-width: 500px) {
-    .card {width: calc(50% - 15px);}
+    .card {
+        width: calc(50% - 15px);
+    }
 
     .cards {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
     }
-    #menuList {margin-left: 0;}
+
+    #menuList {
+        margin-left: 0;
+    }
 }
 
 @media only screen and (min-width: 768px) {
-    #menuList {margin-left: 0;}
+    #menuList {
+        margin-left: 0;
+    }
+
     .card {
         width: calc(33% - 15px);
     }
@@ -508,9 +535,19 @@ h2 {
         flex-wrap: wrap;
     }
 
-    .caruselDnone {display: none}
-    .coruselDesk{display: block;}
-    .productFlex1{display: flex; gap: 20px;}
+    .caruselDnone {
+        display: none
+    }
+
+    .coruselDesk {
+        display: block;
+    }
+
+    .productFlex1 {
+        display: flex;
+        gap: 20px;
+    }
+    .sebet{width: 60%   ;}
 
 }
 
@@ -698,14 +735,22 @@ h2 {
         padding: 20px 0;
         font-size: 20px;
     }
-    
-    .productLeft{width: 50%;}
+
+    .productLeft {
+        width: 50%;
+    }
+
     .coruselDesk {
         display: block;
         width: 100%;
     }
-    .coruselDesk img{width: 90%;height: 100%;}
-    .productRight{
+
+    .coruselDesk img {
+        width: 90%;
+        height: 100%;
+    }
+
+    .productRight {
         margin-top: 10px;
         padding: 20px 15px;
         height: max-content;
