--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,7 @@ button {
 main {
     padding: 0 0 30px 0;
     position: relative;
+    min-height: 65.5vh ;
 }
 
 .mainSelect {
@@ -505,6 +506,23 @@ h2 {
     display: none;
 }
 
+.notFound{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 25px;
+    flex-direction: column;
+    align-items: center;
+    zoom: 1.2;
+    padding-top: 50px;
+}
+.error{
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    margin: 100px auto;
+}
+.notFound a{color: #AD0F14; font-size: 1.4em;}
 @media only screen and (min-width: 500px) {
     .card {
         width: calc(50% - 15px);
@@ -548,7 +566,7 @@ h2 {
         gap: 20px;
     }
     .sebet{width: 60%   ;}
-
+    .notFound{width: 70%; margin: auto  ;}
 }
 
 @media only screen and (min-width: 998px) {
@@ -758,5 +776,6 @@ h2 {
         background-color: #e7e9f1;
         border-radius: 15px;
     }
+    .notFound{padding: 0 ;}
 
 }
