--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     list-style-type: none;
 }
 
+.App {
+    overflow-x: hidden !important;
+}
+
 .bgSilver {
     background-color: #F1F1F1;
 }
@@ -74,25 +78,31 @@ button {
 
 .headerRed {
     background: #AD0F14;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-.headerRed .container {
-    overflow-y: scroll;
-}
+/* 
+.headerRed .container  {
+} */
 
-.headerRed .container::-webkit-scrollbar {
+#menuList::-webkit-scrollbar {
     display: none;
 }
 
 
 #menuList {
+    overflow-y: scroll;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 5px;
-    margin: 20px 0;
-    margin-left: 200px;
+    padding: 20px 0;
+    /* margin: 20px 0; */
+    /* margin-left: 200px; */
 
+}
+
+#menuList li {
+    margin: auto;
 }
 
 #menuList a {
@@ -108,7 +118,8 @@ button {
 main {
     padding: 0 0 30px 0;
     position: relative;
-    min-height: 65.5vh ;
+    min-height: 65.5vh;
+    overflow-x: hidden;
 }
 
 .mainSelect {
@@ -250,12 +261,16 @@ main {
     /* background-color: #AD0F14; */
     padding: 40px 0;
     width: 100%;
-    height: 73vh;
+    height: 100vh;
     background-color: white;
+    box-shadow: 0 0 8px #ccc;
     top: 0;
     right: 0;
     position: absolute;
+    transition: 0.5s all;
+    /* transform: translateX(100%); */
 }
+
 
 .items {
     height: 95%;
@@ -309,12 +324,13 @@ main {
     position: relative;
 }
 
-.listBtn{
+.listBtn {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.pul{
+
+.pul {
     margin-left: 10px;
 }
 
@@ -506,7 +522,7 @@ h2 {
     display: none;
 }
 
-.notFound{
+.notFound {
     width: 100%;
     height: 100%;
     display: flex;
@@ -516,24 +532,44 @@ h2 {
     zoom: 1.2;
     padding-top: 50px;
 }
-.error{
+
+.error {
     width: 100%;
     height: 100%;
     max-width: 400px;
     margin: 100px auto;
 }
-.notFound a{color: #AD0F14; font-size: 1.4em;}
-.kompaniyalar {overflow: hidden;}
-.kompaniyaCards{display: flex; flex-direction: column; gap: 60px; flex-wrap: wrap;}
-.kompaniyaCard{
+
+.notFound a {
+    color: #AD0F14;
+    font-size: 1.4em;
+}
+
+.kompaniyalar {
+    overflow: hidden;
+}
+
+.kompaniyaCards {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    flex-wrap: wrap;
+}
+
+.kompaniyaCard {
     width: 100%;
     height: 70vh;
     padding: 20px 0;
     margin-bottom: 67px;
 }
-.komCardTop img {width:100%;}
 
-.stocItem{height: 35px;}
+.komCardTop img {
+    width: 100%;
+}
+
+.stocItem {
+    height: 35px;
+}
 
 .btn {
     display: inline-block;
@@ -554,26 +590,38 @@ h2 {
     background: #0F9675;
 }
 
-
+.textDesk{display: none;}
 
 @media only screen and (min-width: 500px) {
     .card {
         width: calc(50% - 15px);
     }
 
-    .cards{
+    .cards {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
     }
-    .kompaniyaCards{flex-direction: row; gap: 15px; }
-    .kompaniyaCard{width: calc(50% - 15px); height: max-content; padding: 0;}
-    #menuList {
-        margin-left: 0;
+
+    .kompaniyaCards {
+        flex-direction: row;
+        gap: 15px;
     }
+
+    .kompaniyaCard {
+        width: calc(50% - 15px);
+        height: max-content;
+        padding: 0;
+    }
+    
+    
 }
 
 @media only screen and (min-width: 768px) {
+    .textDesk{display: block;}
+    .textMobil{display: none;}
+
+    #menuList{justify-content: center;}
     #menuList {
         margin-left: 0;
     }
@@ -599,8 +647,20 @@ h2 {
         display: flex;
         gap: 20px;
     }
-    .sebet{width: 60%   ;}
-    .notFound{width: 70%; margin: auto  ;}
+
+    .sebet {
+        width: 60%;
+    }
+
+    .notFound {
+        width: 70%;
+        margin: auto;
+    }
+
+    #menuList li {
+        margin: 0;
+    }
+
 }
 
 @media only screen and (min-width: 998px) {
@@ -668,6 +728,7 @@ h2 {
         justify-content: start;
         gap: 20px;
         flex-wrap: wrap;
+
     }
 
     #menuList a {
@@ -728,10 +789,10 @@ h2 {
     }
 
     .sebet {
-        margin-top: -20px;
+        /* margin-top: -20px; */
         /* background-color: red; */
         width: 40%;
-        height: 79vh;
+        height: 100vh;
     }
 
     footer {
@@ -810,9 +871,21 @@ h2 {
         background-color: #e7e9f1;
         border-radius: 15px;
     }
-    .notFound{padding: 0 ;}
 
-    .kompaniyaCards{padding: 20px 0; flex-direction: row; gap: 15px; }
-    .kompaniyaCard{width: calc(25% - 15px); height: max-content; padding: 0;}
+    .notFound {
+        padding: 0;
+    }
+
+    .kompaniyaCards {
+        padding: 20px 0;
+        flex-direction: row;
+        gap: 15px;
+    }
+
+    .kompaniyaCard {
+        width: calc(25% - 15px);
+        height: max-content;
+        padding: 0;
+    }
 
 }
